# ToolSet

./: .gitignore  LICENSE  README.md  create_file_map_v2.py  create_file_map_v3.py  deep-research-report (5).md  file_map.csv  manifest_doctor.py  notebook_packager.py  semantic_slicer_v5.2.py  semantic_slicer_v6.0.py  workspace_packager_v2.3.py
.github/: CUSTOMIZATIONS.md
ToolSet_bundle_20260429_122332/: ToolSet_bundle_20260429_122332.py  ToolSet_bundle_20260429_122332.yaml
ToolSet_bundle_20260502_234111/: ToolSet_bundle_20260502_234111.py  ToolSet_bundle_20260502_234111.yaml
aletheia_tool_core/: __init__.py  config.py  manifest.py  security.py
local_tool_assist_mcp/: __init__.py  backend_api.py  compiler.py  local_tool_assist_session.schema.json  mcp_server.py  policy.py  pyproject.toml  runner.py  schemas.py  session.py  tool_registry.py  workflow.py
local_tool_assist_mcp/adapters/: __init__.py  base.py  claude_messages_adapter.py  lm_studio_adapter.py  openai_responses_adapter.py
local_tool_assist_mcp/docs/: backend_contract.md  cli_contracts.md  lmstudio_setup.md
local_tool_assist_mcp/examples/: mcp.json
local_tool_assist_mcp/schemas/: handoff_bundle.schema.json
local_tool_assist_mcp/tests/: test_compiler.py  test_guided_workflow.py  test_lmstudio_setup.py  test_mcp_contract.py  test_openai_adapter_contract.py  test_policy.py  test_provider_adapters.py  test_registry.py  test_runner.py  test_schemas.py  test_session.py
local_tool_assist_mcp/tests/fixtures/: fake_doctor.py  fake_linter.py  fake_scanner.py  fake_slicer.py
tests/: test_config.py  (+4 more)
(+76 files in other folders)
